--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -33,6 +33,10 @@ jobs:
           CONTEXT: ${{ toJson(github) }}
         run: |
           import subprocess, os, re, json, urllib
+          context = json.loads(os.environ['CONTEXT'])
+
+          print(context)
+
           release_true = "echo '::set-output name=PYPI_RELEASE::true'"
 
           pattern = re.compile("^v\d{1,2}\.\d{1,2}\.\d{1,2}")
@@ -41,7 +45,6 @@ jobs:
             if pattern.match(tag) is not None:
               subprocess.call(release_true, shell=True)
           else:
-            context = json.loads(os.environ['CONTEXT'])
             tag_url = context['event']['repository']['tags_url']
             tags = json.loads(urllib.urlopen(tag_url).read())
             tagged_sha1 = tags[0]['commit']['sha']
