--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -20,8 +20,6 @@ on:
     branches:
       - main
   create:
-    branches:
-      - main
 
 jobs:
   run-pypi:
@@ -66,7 +64,9 @@ jobs:
 
       - name: PyPI release
         if: steps.tags.outputs.PYPI_RELEASE == 'true'
-        uses: casperdcl/deploy-pypi@v1
-        with:
-          password: ${{ secrets.pypi_token }}
-          build: true
+        run: echo "A PyPI release."
+
+#        uses: casperdcl/deploy-pypi@v1
+#        with:
+#          password: ${{ secrets.pypi_token }}
+#          build: true
