--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -50,6 +50,11 @@ jobs:
             tags = json.loads(urllib.urlopen(tag_url).read())
             tagged_sha1 = tags[0]['commit']['sha']
             tag_name = tags[0]['name']
+
+            print(tag_url)
+            print(tags)
+            print(tag_name)
+
             if tagged_sha1 in [x['id'] for x in context['event']['commits']]:
               print("tagged sha1")
               if pattern.match(tag_name) is not None:
