--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -37,7 +37,9 @@ jobs:
           events_url = context['event']['repository']['events_url']
           events = json.loads(urllib.urlopen(events_url).read())
 
-          print(events)
+          print(events[0])
+          print("")
+          print(events[1])
 #          print(events['payload'][0]['ref'])
 #          print(events['payload'][1]['ref_type'])
 #          print(events['payload'][1]['ref'])
