--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -37,9 +37,10 @@ jobs:
           events_url = context['event']['repository']['events_url']
           events = json.loads(urllib.urlopen(events_url).read())
 
-          print(events[0]['payload'])
+          print(events[0]['payload']['ref_type'])
+          print(events[0]['payload']['ref'])
           print("")
-          print(events[1])
+          print(events[1]['payload'])
 
 #          if "refs/heads/main" in events[0]['ref']:
 #            print("tag pushed into master")
