--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -38,10 +38,10 @@ jobs:
           events = json.loads(urllib.urlopen(events_url).read())
 
           print(events[0]['payload'])
-          print(events[0]['payload']['ref_type'])
+#          print(events[0]['payload']['ref_type'])
           print(events[0]['payload']['ref'])
           print("")
-          print(events[1]['payload'])
+          print(events[1]['payload']['ref'])
 
 #          if "refs/heads/main" in events[0]['ref']:
 #            print("tag pushed into master")
